<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hotbook</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mail">MAIL</string>
    <string name="password">PASSWORD</string>
    <string name="repeatPassword">REPEAT PASSWORD</string>
    <string name="userName">USERNAME</string>
    <string name="name">NAME</string>
    <string name="webPage">WEB PAGE</string>
    <string name="biography">BIO</string>
    <string name="address">ADDRESS</string>
    <string name="venue">VENUE?</string>
    <string name="login">LOGIN</string>
    <string name="none"></string>
    <string name="register">REGISTER</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="venues">Venues</string>
    <string name="newPost">New Post</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="author">Author</string>
    <string name="likes">likes</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    
    <string name="errUnexpected">Unexpected error</string>
    <string name="errCommunications">Communication Error (%1$s)</string>
    <string name="errNull">Empty response error</string>
    <string name="errFBNotAvailable">Failed to connect FB server</string>

</resources>
