<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mx.hotbook.android.ui.core.Register" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/none"
        android:scaleType="fitCenter"
        android:src="@drawable/login_place_holder" />

    <com.facebook.widget.LoginButton
        xmlns:fb="http://schemas.android.com/apk/res-auto"
        android:id="@+id/authButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        fb:login_text="Register with Facebook"
        fb:logout_text="Logout" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/common_mail_icon"
        android:drawableStart="@drawable/common_mail_icon"
        android:ems="10"
        android:hint="@string/mail" />

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditText03"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditText02"
        android:layout_alignStart="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:drawableLeft="@drawable/common_user_icon"
        android:drawableStart="@drawable/common_user_icon"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/EditText02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditText03"
        android:layout_alignStart="@+id/editText1"
        android:layout_below="@+id/editText2"
        android:drawableLeft="@drawable/common_password_icon"
        android:drawableStart="@drawable/common_password_icon"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/EditText03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditText01"
        android:layout_alignStart="@+id/editText1"
        android:layout_below="@+id/EditText02"
        android:drawableLeft="@drawable/common_password_icon"
        android:drawableStart="@drawable/common_password_icon"
        android:ems="10"
        android:hint="@string/repeatPassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/EditText04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditText05"
        android:layout_alignStart="@+id/editText1"
        android:layout_below="@+id/EditText01"
        android:ems="10"
        android:hint="@string/webPage"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/EditText05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditText01"
        android:layout_alignStart="@+id/editText1"
        android:layout_below="@+id/EditText04"
        android:ems="10"
        android:hint="@string/biography"
        android:inputType="textPassword" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditText05"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/venue" />

    <Button android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/switch1"
            android:layout_below="@+id/switch1"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="27dp"
            android:background="@android:color/transparent"
            android:textColor="@color/themeBlack"
            android:text="@string/register" 
            android:onClick="onClickBnRegister"/>

</RelativeLayout>