<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	<TableLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentStart="true"
	    android:layout_alignParentBottom="true"
	    android:stretchColumns="0,1,2,3,4" >

	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <ImageButton
	            android:id="@+id/imageView1"
	            android:layout_width="40dip"
	            android:layout_height="40dip"
	            android:background="@android:color/transparent"
	            android:contentDescription="@string/none"
	            android:gravity="center_vertical"
	            android:scaleType="fitCenter"
	            android:src="@drawable/menu_home" />

	        <ImageButton
	            android:id="@+id/imageView2"
	            android:layout_width="40dip"
	            android:layout_height="40dip"
	            android:background="@android:color/transparent"
	            android:contentDescription="@string/none"
	            android:scaleType="fitCenter"
	            android:src="@drawable/menu_explore" />

	        <ImageButton
	            android:id="@+id/imageView3"
	            android:layout_width="40dip"
	            android:layout_height="40dip"
	            android:background="@android:color/transparent"
	            android:contentDescription="@string/none"
	            android:scaleType="fitCenter"
	            android:src="@drawable/menu_recomended" />

	        <ImageButton
	            android:id="@+id/imageView4"
	            android:layout_width="40dip"
	            android:layout_height="40dip"
	            android:background="@android:color/transparent"
	            android:contentDescription="@string/none"
	            android:scaleType="fitCenter"
	            android:src="@drawable/menu_add_new" />

	        <ImageButton
	            android:id="@+id/imageView5"
	            android:layout_width="40dip"
	            android:layout_height="40dip"
	            android:background="@android:color/transparent"
	            android:contentDescription="@string/none"
	            android:scaleType="fitCenter"
	            android:src="@drawable/menu_profile" />
	    </TableRow>

	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:layout_marginTop="4dp"
	            android:text="@string/home"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:text="@string/explore"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:text="@string/venues"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:text="@string/newPost"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:text="@string/profile"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	    </TableRow>
	</TableLayout>

</RelativeLayout>