<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mx.hotbook.android.ui.view.Registration" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/ivProfileBg"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/none"
        android:scaleType="fitXY"
        android:src="@drawable/login_texture"/>

    <com.facebook.widget.LoginButton
        xmlns:fb="http://schemas.android.com/apk/res-auto"
        android:id="@+id/authButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivProfileBg"
        android:layout_centerHorizontal="true"
        fb:login_text="Register with Facebook"
        fb:logout_text="Logout" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/common_mail_icon"
        android:drawableStart="@drawable/common_mail_icon"
        android:ems="10"
        android:hint="@string/mail" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRepeatPassword"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_alignStart="@+id/etMail"
        android:layout_below="@+id/etMail"
        android:drawableLeft="@drawable/common_user_icon"
        android:drawableStart="@drawable/common_user_icon"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etRepeatPassword"
        android:layout_alignStart="@+id/etMail"
        android:layout_below="@+id/etUserName"
        android:drawableLeft="@drawable/common_password_icon"
        android:drawableStart="@drawable/common_password_icon"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etRepeatPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etName"
        android:layout_alignStart="@+id/etMail"
        android:layout_below="@+id/etPassword"
        android:drawableLeft="@drawable/common_password_icon"
        android:drawableStart="@drawable/common_password_icon"
        android:ems="10"
        android:hint="@string/repeatPassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etWebPage"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etBiography"
        android:layout_alignStart="@+id/etMail"
        android:layout_below="@+id/etName"
        android:ems="10"
        android:hint="@string/webPage"
        android:inputType="text" />

    <EditText
        android:id="@+id/etBiography"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etName"
        android:layout_alignStart="@+id/etMail"
        android:layout_below="@+id/etWebPage"
        android:ems="10"
        android:hint="@string/biography"
        android:inputType="text" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etBiography"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/venue" />

    <ImageView android:id="@+id/ivProfile"
               android:layout_width="150dip"
               android:layout_height="150dip"
               android:layout_alignParentTop="true"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="24dp"
               android:src="@drawable/login_place_holder" 
               android:contentDescription="@string/none"
               android:scaleType="fitXY"/>

    <ImageButton android:id="@+id/ibProfileImg"
                 android:layout_width="40dip"
                 android:layout_height="40dip"
                 android:layout_alignBottom="@+id/ivProfile"
                 android:layout_alignRight="@+id/ivProfile"
                 android:layout_alignEnd="@+id/ivProfile"
                 android:scaleType="fitXY"
                 android:src="@drawable/register_add_photo_button" 
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/none"
                 android:onClick="onClickIbProfilePic"/>
    
        <LinearLayout android:id="@+id/mapContainer"
                  android:layout_width="wrap_content"
                  android:layout_height="200dp"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentRight="true"
                  android:layout_alignParentEnd="true"
                  android:layout_below="@+id/switch1"
                  android:background="@color/themeBlack"
                  android:orientation="vertical" 
                  android:layout_marginTop="10dp"
                  android:layout_marginBottom="10dp"
                  android:paddingTop="5dp"
                  android:paddingBottom="5dp"/>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mapContainer"
            android:layout_centerHorizontal="true" 
            android:hint="@string/name"/>
        </RelativeLayout>
</ScrollView>
</RelativeLayout>