<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mx.hotbook.android.ui.core.Launcher" >

    <ImageView android:id="@+id/imageView1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentLeft="true"
               android:scaleType="fitXY"
               android:layout_alignParentTop="true"
               android:layout_alignParentStart="true"
               android:src="@drawable/splas_background" 
               android:contentDescription="@string/none"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="14dp"
        android:text="@string/register" 
        android:background="@android:color/transparent"
        android:textColor="@color/themeWhite"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="22dp"
        android:text="@string/login"
        android:background="@android:color/transparent"
        android:textColor="@color/themeWhite"/>

</RelativeLayout>
