<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mx.hotbook.android.ui.core.Login" >

    <ImageView android:id="@+id/imageView1"
               android:layout_width="wrap_content"
               android:layout_height="200dp"
               android:layout_alignParentLeft="true"
               android:layout_alignParentStart="true"
               android:layout_alignParentRight="true"
               android:layout_alignParentEnd="true"
               android:layout_alignParentTop="true"
               android:scaleType="fitCenter"
               android:src="@drawable/login_place_holder" 
               android:contentDescription="@string/none"/>

    <com.facebook.widget.LoginButton xmlns:fb="http://schemas.android.com/apk/res-auto"
                                     android:id="@+id/authButton"
                                     android:layout_width="fill_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_below="@+id/imageView1"
                                     android:layout_centerHorizontal="true"
                                     fb:login_text="Login with Facebook" 
                                     fb:logout_text="Logout"/>

    <EditText android:id="@+id/etMail"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/authButton"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="39dp"
              android:ems="10" 
              android:hint="@string/mail"
              android:drawableLeft="@drawable/common_mail_icon"
              android:drawableStart="@drawable/common_mail_icon">
        <requestFocus />
    </EditText>

    <EditText android:id="@+id/etPassword"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignLeft="@+id/etMail"
              android:layout_alignStart="@+id/etMail"
              android:layout_below="@+id/etMail"
              android:drawableLeft="@drawable/common_password_icon"
              android:drawableStart="@drawable/common_password_icon"
              android:ems="10"
              android:hint="@string/password"
              android:inputType="textPassword" />

    <Button android:id="@+id/bnLogin"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/etPassword"
                 android:layout_alignStart="@+id/etPassword"
                 android:layout_below="@+id/etPassword"
                 android:layout_marginTop="38dp"
                 android:scaleType="fitCenter"
                 android:contentDescription="@string/none"
                 android:background="@android:color/transparent"
                 android:textColor="@color/themeBlack"
                 android:text="@string/login"
                 android:onClick="onClickBnLogin"/>/>

</RelativeLayout>