<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mx.hotbook.android.ui.core.Launcher" >

    <ImageView android:id="@+id/imageView1"
               android:layout_width="wrap_content"
               android:layout_height="250dip"
               android:layout_alignParentLeft="true"
               android:layout_alignParentRight="true"
               android:layout_alignParentTop="true"
               android:src="@drawable/login_place_holder"
               android:contentDescription="@string/none" 
               android:layout_alignParentStart="true"
               android:layout_alignParentEnd="true"/>

    <RelativeLayout android:id="@+id/relativeLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="60dip"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/imageView1"
                    android:background="@color/themeBlack" >

        <TextView android:id="@+id/textView1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignParentRight="true"
                  android:layout_alignParentEnd="true"
                  android:layout_centerVertical="true"
                  android:layout_marginRight="19dp"
                  android:layout_marginEnd="19dp"
                  android:text="@string/category"
                  android:textAppearance="?android:attr/textAppearanceSmall"
                  android:textColor="@color/themeWhite" />

        <ImageView android:id="@+id/imageView2"
                   android:layout_width="55dip"
                   android:layout_height="55dip"
                   android:layout_alignParentLeft="true"
                   android:layout_alignParentStart="true"
                   android:layout_centerVertical="true"
                   android:layout_marginLeft="16dp"
                   android:layout_marginStart="16dp"
                   android:scaleType="fitCenter"
                   android:contentDescription="@string/none" 
                   android:src="@drawable/common_placeholder" />

        <TextView android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_toRightOf="@+id/imageView2"
            android:layout_toEndOf="@+id/imageView2"
            android:text="@string/author"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/themeWhite" />
    </RelativeLayout>

    <LinearLayout android:id="@+id/linearLayout1"
                  android:layout_width="match_parent"
                  android:layout_height="10dip"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentStart="true"
                  android:layout_below="@+id/relativeLayout1"
                  android:background="@color/themeBlue"
                  android:orientation="vertical" >
    </LinearLayout>

    <TextView android:id="@+id/TextView02"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBaseline="@+id/textView2"
              android:layout_alignBottom="@+id/textView2"
              android:layout_marginLeft="14dp"
              android:layout_marginStart="14dp"
              android:layout_toRightOf="@+id/textView2"
              android:layout_toEndOf="@+id/textView2"
              android:text="@string/likes"
              android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView android:id="@+id/textView2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"
              android:layout_below="@+id/linearLayout1"
              android:layout_marginLeft="22dp"
              android:layout_marginStart="22dp"
              android:layout_marginTop="5dp"
              android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView android:id="@+id/textView3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"
              android:layout_below="@+id/textView2"
              android:layout_marginTop="8dp"
              android:layout_marginLeft="5dp"
              android:layout_marginStart="5dp"
              android:text="@string/title"
              android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView android:id="@+id/textView4"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"
              android:layout_below="@+id/textView3"
              android:layout_marginTop="8dp"
              android:layout_marginLeft="5dp"
              android:layout_marginStart="5dp"
              android:text="@string/description"
              android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageButton android:id="@+id/imageButton1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/linearLayout1"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/none"
                 android:src="@drawable/common_favorite_off" />

</RelativeLayout>